# pycxxwrapper

./: CMakeLists.txt  README.md  pyproject.toml
demo/: gen_and_store_graph.py  shortest_path_boost.py  shortest_path_igraph.py  view_graph_from_file.py
demo/graphs/: graph001.graphml  graph002.graphml  graph003.graphml  graph004.graphml  graph005.graphml
src/: CMakeLists.txt  shortest_path.cpp
src/pycxxwrapper/: algorithms.py  plot_utils.py  random_connected_graph.py  shortest_path.py  shortest_path_cxx.py  utils.py
src/pycxxwrapper/graphs/: random_graph.graphml
