[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pycxxwrapper"
version = "0.1.0"
description = "A Python package with compiled extensions."
readme = "README.md"
authors = [
  { name = "George Vassos", email = "georgios.vassos1@maersk.com" }
]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["pycxxwrapper"]
include-package-data = true

[tool.setuptools.package-data]
"pycxxwrapper" = ["graphs/*.graphml"]

[project.urls]
Homepage = "https://github.com/georgios.vassos1/pycxxwrapper"

