[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pycxxwrapper"
version = "0.1.0"
description = "A Python package with compiled extensions."
readme = "README.md"
authors = [
  { name = "George Vassos", email = "georgios.vassos1@maersk.com" }
]
requires-python = ">=3.9"

dependencies = [
    "build==1.2.2.post1",
    "cmake==3.31.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "distro==1.9.0",
    "fonttools==4.55.3",
    "igraph==0.11.8",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "pybind11==2.13.6",
    "pycairo==1.27.0"
]

[tool.setuptools]
packages = ["pycxxwrapper"]
include-package-data = true

[tool.setuptools.package-data]
"pycxxwrapper" = ["graphs/*.graphml"]

[project.urls]
Homepage = "https://github.com/georgios.vassos1/pycxxwrapper"

